// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-gkKNzf:last-child td:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-gkKNzf:last-child td:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-ejZzIq {
    background: var(--colors-primaryDark);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-ejZzIq:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-ejZzIq:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-jVAARh-size-md .c-dOcJjJ,
  .c-cwQMhQ-jVAARh-size-md .c-ejZzIq,
  .c-cwQMhQ-jVAARh-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }
}

@media  {
  .c-cwQMhQ-iliYStP-css {
    height: 100px;
    width: 400px;
    color: var(--colors-primary500);
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-jVAARh-size-md c-cwQMhQ-iliYStP-css"
  >
    <thead
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <th
          class="c-ejZzIq"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-gkKNzf:last-child td:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-gkKNzf:last-child td:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-ejZzIq {
    background: var(--colors-primaryDark);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-ejZzIq:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-ejZzIq:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-jVAARh-size-md .c-dOcJjJ,
  .c-cwQMhQ-jVAARh-size-md .c-ejZzIq,
  .c-cwQMhQ-jVAARh-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-gJEyOc-size-lg .c-dOcJjJ,
  .c-cwQMhQ-gJEyOc-size-lg .c-ejZzIq,
  .c-cwQMhQ-gJEyOc-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }
}

@media  {
  .c-cwQMhQ-iliYStP-css {
    height: 100px;
    width: 400px;
    color: var(--colors-primary500);
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gJEyOc-size-lg c-cwQMhQ-iliYStP-css"
  >
    <thead
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <th
          class="c-ejZzIq"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
